--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <!-- <script src='main.js'></script> -->
 </head>
 <body>
-    <p>hello</p>
-    <hello-card></hello-card>
+    <p>This is the example for the cool hello webcomponent</p>
+    <hr />
+    <hello-card name='Norman'></hello-card>
     <script src='./hello-world.js'></script>
+    <hr />
 </body>
 </html>
