adjust the name of the webcomponent

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <p>This is the example for the cool hello webcomponent</p>
     <hr />
-    <hello-card name='Norman'></hello-card>
+    <hello-card name='Norman Sutorius'></hello-card>
     <script src='./hello-world.js'></script>
     <hr />
 </body>
